tests/ui/shape_macros/unknown_model.stderr
error: Failed to parse schema: Schema file 'prax/schema.prax' not found. Searched in:
         - CARGO_MANIFEST_DIR/prax/schema.prax
         - (absolute) prax/schema.prax
         - (current_dir) prax/schema.prax
 --> tests/ui/shape_macros/unknown_model.rs:5:1
  |
5 | prax_orm::prax_schema!("prax/schema.prax");
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `prax_orm::prax_schema` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unknown model `Useer`. did you mean `User`?
 --> tests/ui/shape_macros/unknown_model.rs:8:33
  |
8 |     let _w = prax_orm::r#where!(Useer, {
  |                                 ^^^^^
